Spring/Bank/src/main/java/com/example/demo/errors/AccountDoesntExistsException.java
package com.example.demo.errors;

public class AccountDoesntExistsException extends Exception {

	/**
	 * 
	 */
	private static final long serialVersionUID = 1L;

}
